--- a/src/styles/routes/home.css
+++ b/src/styles/routes/home.css
@@ -213,7 +213,18 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    
 }
+
+.signinRedirect {
+    cursor: pointer;
+    transition: transform 0.3s ease; 
+}
+
+.signinRedirect:hover {
+    transform: scale(1.1); 
+}
+
   
 @media (max-width: 964px) {
     .NOAA {
