resortInfo bug fix

--- a/src/styles/components/resortInfo.css
+++ b/src/styles/components/resortInfo.css
@@ -21,7 +21,9 @@
 
     justify-items:center;
 
-    grid-template-columns:
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    grid-template-areas:
         "indvLogo"
         "indvTitle";
 
