--- a/src/styles/routes/signIn.css
+++ b/src/styles/routes/signIn.css
@@ -20,6 +20,7 @@
   margin-bottom: 2vh;
   width: 100%;
   height: auto;
+  max-height: 90vh;
 
   background-color: rgba(182, 182, 182, 0.849);
   border: 0px;
@@ -133,4 +134,12 @@
   padding: 1rem;
   background-color: #f8f9fa;
   font-size: small;
+}
+
+.signup-form-fields {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  margin-bottom: 4vw;
 }
