--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
   line-height: 1.5;
   font-weight: 400;
   width: 100%;
-  color-scheme: light;
+  color-scheme: light dark;
   color: black;
   background-color: #242424;
 
