--- a/src/styles/components/resortCard.css
+++ b/src/styles/components/resortCard.css
@@ -60,3 +60,17 @@
 .visitPageButton:hover {
     transform: scale(1.1);
 }
+
+@media (prefers-color-scheme: dark) {
+ 
+    .cardContainer {
+        background-color: #141414;
+    }
+
+    .visitPageButton {
+        border: 2px solid #ededeb;
+        background-color: black;
+        color: #ededeb; 
+    }
+
+}
