--- a/src/styles/components/resortInfo.css
+++ b/src/styles/components/resortInfo.css
@@ -202,3 +202,29 @@
     grid-area: weatherAdvisories;
     background-color: lightgoldenrodyellow;
 }
+
+@media (prefers-color-scheme: dark) {
+ 
+    .indvContainer {
+        background-color: #141414;
+    }
+
+    .indvBackground {
+        background-image: url('src/assets/dark-mode-background.jpg');
+        background-position: center;
+    }
+
+    .indvTitle {
+        color: #ededeb;
+    }
+
+    .indvBackground::after {
+        background: linear-gradient(to bottom, rgba(20, 20, 20, 0) 0%, rgba(20, 20, 20, 1) 100%);
+    }
+
+    .indvPageContainer {
+        background-color: #141414;
+        color: #ededeb;
+    }
+
+}
