--- a/src/styles/routes/feedback.css
+++ b/src/styles/routes/feedback.css
@@ -23,7 +23,7 @@
     justify-items:center;
 
     display: grid;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 2fr;
     grid-template-areas:
         "flogo"
         "ftitle"
@@ -65,6 +65,8 @@
     width: 70vw;
     height: 30vw;
     min-height: 35vh;
+
+    transform: translateY(-8vw);
 
     display: flex;
     flex-direction: column;
@@ -163,4 +165,42 @@
     margin: 1vw;
     width: 80%;
     background-color: rgba(217,217,217,0.8);
+}
+
+@media (max-width: 728px) {
+    .fbackground {
+        grid-template-rows: 1fr 1fr 3fr;
+    }
+}
+
+@media (prefers-color-scheme: dark) {
+ 
+    .fcontainer {
+        background-color: #141414;
+    }
+
+    .fbackground {
+        background-image: url('src/assets/feedback-background-dark.jpg');
+        background-position: center;
+    }
+
+    .ftitle {
+        color: #ededeb;
+    }
+
+    .fbackground::after {
+        background: linear-gradient(to bottom, rgba(20, 20, 20, 0) 0%, rgba(20, 20, 20, 1) 100%);
+    }
+
+    .submitButton {
+        border: 2px solid #ededeb;
+        background-color: black;
+        color: #ededeb; 
+    }
+
+    .feedbackDisplay {
+        background-color: #141414;
+        color: #ededeb;
+    }
+
 }
