--- a/src/styles/routes/feedback.css
+++ b/src/styles/routes/feedback.css
@@ -51,9 +51,9 @@
 .ftitle {
     grid-area: ftitle;
     
-    
     font-size: 4vw;
     font-family: "Anonymous Pro", monospace;
+    color: black;
     text-shadow: 0 0 15px black;
 
     height: 4vw;
