--- a/src/styles/routes/resort.css
+++ b/src/styles/routes/resort.css
@@ -52,6 +52,7 @@
 
     font-size: 4vw;
     font-family: "Anonymous Pro", monospace;
+    color: black;
     text-shadow: 0 0 15px black;
 
     height: 4vw;
