--- a/src/styles/routes/home.css
+++ b/src/styles/routes/home.css
@@ -82,14 +82,15 @@
 
 .intro {
     grid-area: intro;
-    margin-top: 0vh;
+    margin-top: 2vw;
 
-    height: 50vh;
+    font-size: 5vw;
 
     display: flex;
     flex-direction: column;
     justify-content: center;
     text-align: center;
+    margin-bottom: 2vw;
 }
 
 .mission {
