--- a/src/styles/routes/home.css
+++ b/src/styles/routes/home.css
@@ -84,7 +84,7 @@
     grid-area: intro;
     margin-top: 2vw;
 
-    font-size: 5vw;
+    font-size: clamp(1rem, 4vw, 2.5rem);
 
     display: flex;
     flex-direction: column;
