--- a/src/styles/components/navbar.css
+++ b/src/styles/components/navbar.css
@@ -42,6 +42,7 @@ div.imgContainer{
         width: 25px;
         height: 25px;
         margin-left:.5vw;
+        padding-top:0.5vh;
       }
       
 }
