Leaflet map made responsive

--- a/src/styles/routes/resort.css
+++ b/src/styles/routes/resort.css
@@ -54,7 +54,6 @@
     font-size: 4vw;
     font-family: "Anonymous Pro", monospace;
     color: black;
-    text-shadow: 0 0 15px black;
 
     height: 4vw;
 }
@@ -68,7 +67,7 @@
 
     font-size: 5vw;
     font-family: "Anonymous Pro", monospace;
-    color: white;
+    color: black;
     text-shadow: 0 0 15px black;
 
     height: 4vw;
@@ -147,6 +146,10 @@
  
     .resortContainer {
         background-color: #141414;
+    }
+
+    .resortText {
+        color: white;
     }
 
     .resortBackground {
