--- a/src/styles/components/resortInfo.css
+++ b/src/styles/components/resortInfo.css
@@ -99,7 +99,6 @@
 }
 
 .leaflet {
-    width: 90vw;
     height: auto; 
 
     display: flex;
@@ -107,6 +106,11 @@
     justify-content: center;
     align-items: center;
     text-align: center;
+
+    MapContainer {
+        width: 90vw;
+        height: auto;
+    }
 }
 
 .skiData {
