--- a/src/styles/routes/home.css
+++ b/src/styles/routes/home.css
@@ -123,6 +123,12 @@
 
     height: 20%;
 
+    a {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
 }
 
 .exploreButtonContainer {
