--- a/src/styles/routes/account.css
+++ b/src/styles/routes/account.css
@@ -95,6 +95,10 @@
 
 
 @media (prefers-color-scheme: dark) {
+    .accountContainer {
+        background-color: #141414;
+    }
+    
     .accountHeader {
         color: #ededeb;
     }
@@ -110,4 +114,9 @@
         background-image: url('src/assets/accountnightbackground.jpg');
         background-position: center;
     }
+    .accountBackground::after {
+        background: linear-gradient(to bottom, rgba(20, 20, 20, 0) 0%, rgba(20, 20, 20, 1) 100%);
+
+    }
 }
+
