--- a/src/styles/components/navbar.css
+++ b/src/styles/components/navbar.css
@@ -1,6 +1,8 @@
 div.navbarContainer {
     display:flex;
     position: sticky;
+    top: 0;
+    z-index: 100;
     background-color: white;
     width: calc(100vw - 4px);
     border: 2px solid #141414;
