--- a/src/styles/routes/resort.css
+++ b/src/styles/routes/resort.css
@@ -79,6 +79,7 @@
     margin-top: 2vw;
     margin-left: 10vw;
     margin-right: 10vw;
+    margin-bottom: 2vw;
 
     justify-content: center;
     align-items: center;
