--- a/src/styles/components/resortCard.css
+++ b/src/styles/components/resortCard.css
@@ -1,6 +1,5 @@
 .cardContainer {
     display: grid;
-    height: 96vh;
     grid-template-areas:
         "resortName"
         "resortImg"
@@ -9,26 +8,23 @@
 
 .resortName {
     grid-area: resortName;
-    height: 8vh;
-    padding: 2vh;
-    margin: 0;
     font-family: 'Anonymous Pro';
 }
 
 .resortImg {
     grid-area: resortImg;
-    justify-self: center;
     padding-bottom: 1rem;
 
     img {
-        height: 70vh;
-        width: auto;
+        width: 90vw;
+        height: auto;
     }
 }
 
 .resortInfo {
     grid-area: resortInfo;
-    height: 10vh;
+
+    padding-block: 1rem;
     font-family: "Anonymous Pro";
 }
 
