--- a/src/styles/components/resortCard.css
+++ b/src/styles/components/resortCard.css
@@ -8,6 +8,7 @@
 
 .resortName {
     grid-area: resortName;
+    margin-bottom: 2vh;
     font-family: 'Anonymous Pro';
 }
 
@@ -17,7 +18,7 @@
 
     img {
         width: 90vw;
-        max-height: 80vh;
+        max-height: 70vh;
         object-fit: cover;
     }
 }
