--- a/src/styles/routes/account.css
+++ b/src/styles/routes/account.css
@@ -70,7 +70,8 @@
     grid-area: accountPersonal;
     margin-top: 2vw;
 
-    font-size: clamp(1rem, 4vw, 2.5rem);
+    width: 90vw;
+    font-size: clamp(1rem, 3vw, 2.5rem);
 
     display: flex;
     flex-direction: column;
