--- a/src/styles/routes/resort.css
+++ b/src/styles/routes/resort.css
@@ -80,6 +80,7 @@
     margin-left: 10vw;
     margin-right: 10vw;
     margin-bottom: 2vw;
+    padding-left: 5vw;
 
     justify-content: center;
     align-items: center;
