--- a/src/styles/components/resortCard.css
+++ b/src/styles/components/resortCard.css
@@ -1,6 +1,4 @@
 .cardContainer {
-    
-    transform: scale(0.5);
     display: grid;
     grid-template-areas:
         "resortName"
@@ -24,7 +22,8 @@
     justify-self: center;
 
     img {
-        width: 70vw;
+        width: 100%;
+        max-width: 70vw;
         max-height: 60vh;
         object-fit: cover;
     }
@@ -32,6 +31,8 @@
 
 .resortInfo {
     grid-area: resortInfo;
+
+    /* font-size: 1.5rem; */
 
     padding-block: 1rem;
     font-family: "Anonymous Pro";
