--- a/src/styles/routes/account.css
+++ b/src/styles/routes/account.css
@@ -85,13 +85,19 @@
 
 .accountResorts {
     grid-area: accountResorts;
-    width: 46vw;
+
+    display: flex;
+    flex-direction: column;
+    
+    width: 45vw;
+    margin-right: 1vw;
     display: flex;
 }
 
 .accountInfo {
     grid-area: accountInfo;
-    width: 46vw;
+    width: 45vw;
+    margin-left: 1vw;
     display: flex;
 }
 
