--- a/src/styles/routes/signIn.css
+++ b/src/styles/routes/signIn.css
@@ -2,15 +2,19 @@
   height: calc(100vh- 2px);
   width: 100%;
 
-  background-image: url('src/assets/sign-in-background.jpg');
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-
   font-family: "Anonymous Pro", monospace;
 
   display: flex;
   justify-content: center;
+}
+.signin-background{
+  background-image: url('src/assets/sign-in-background.jpg');
+  background-size:cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  justify-content: center;
+  height:100vh;
+  width: 100vw;
 }
 
 .signin-form {
