--- a/src/styles/components/resortCard.css
+++ b/src/styles/components/resortCard.css
@@ -32,7 +32,8 @@
     img {
         width: 100%;
         max-width: 70vw;
-        height: 60vh;
+        height: auto;
+        max-height: 60vh;
         object-fit: cover;
     }
 }
