--- a/src/styles/routes/account.css
+++ b/src/styles/routes/account.css
@@ -1,5 +1,13 @@
-.accountBackground
-{
+.accountCounter {
+    display: grid;
+    width: 100%;
+    grid-template-areas:
+        "accountBackground"
+        "accountContentContainer"
+        "accountFooter";
+}
+
+.accountBackground{
     position: relative;
     grid-area: resortBackground;
 
@@ -20,7 +28,18 @@
     margin-bottom: 10vh;
 }
 
-.accountContainer .accountContentContainer {
+.accountBackground::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 33%;
+    background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 100%);
+    pointer-events: none; 
+}
+
+.accountContentContainer {
     grid-area: accountContentContainer;
     margin-left: 2vh;
     margin-right: 2vh;
@@ -29,16 +48,14 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+
+    font-size: 1.5vw;
     
-    font-size: 1.3em;
     font-family: "Anonymous Pro"," monospace";
     color: black;
-
-    display: grid;
-    grid-template-areas:
-        "accountPersonal"
-        "accountFooter";
+    transition: margin-top 0.5s ease;
 }
+
 .accountHeader {
     grid-area: accountHeader;
     margin-top: 2vw;
@@ -55,32 +72,24 @@
     text-align: center;
     margin-bottom: 2vw;
 }
-.accountBackground::after {
-    content: "";
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 33%;
-    background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 100%);
-    pointer-events: none; 
-}
 
 .accountPersonal {
     grid-area: accountPersonal;
     margin-top: 2vw;
 
-    width: 92vw;
+    width: 96vw;
     font-size: clamp(1rem, 3vw, 2.5rem);
 
     display: flex;
+    justify-items: center;
     flex-direction: column;
     margin-bottom: 2vw;
 
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr;
     grid-template-areas:
-        "accountResorts accountInfo";
+        "accountInfo"
+        "accountResorts";
 }
 
 .accountResorts {
@@ -89,14 +98,17 @@
     display: flex;
     flex-direction: column;
     
-    width: 45vw;
     margin-right: 1vw;
     display: flex;
+
+    h2 {
+        justify-self: center;
+    }
 }
 
 .accountInfo {
     grid-area: accountInfo;
-    width: 45vw;
+    width: 96vw;
     margin-left: 1vw;
     display: flex;
 }
@@ -116,8 +128,6 @@
 .homeRedirect:hover {
     transform: scale(1.1); 
 }
-
-/* TODO: add breakpoint for mobile devices */
 
 @media (prefers-color-scheme: dark) {
     .accountContainer {
@@ -153,30 +163,6 @@
     .homeRedirect {
         margin-top: 2vh;
         border: 1px solid #ededeb;
-    }
-}
-
-@media (max-width: 1200px) {
-    .accountPersonal {
-        grid-template-columns: 1fr;
-        grid-template-areas:
-            "accountInfo"
-            "accountResorts";
-    }
-
-    .accountResorts {
-        width: 96vw;
-        margin-right: 0;
-
-        h2 {
-            padding-left: 26%;
-        }
-    }
-
-    .accountInfo {
-        padding-left: 8vw;
-        width: 96vw;
-        margin-left: 0;
     }
 }
 
