--- a/src/styles/components/navbar.css
+++ b/src/styles/components/navbar.css
@@ -3,7 +3,7 @@ div.navbarContainer {
     position: sticky;
     top: 0;
     z-index: 100000;
-    background-color: white;
+    background-color: #ededed;
     width: calc(100vw - 4px);
     border: 2px solid #141414;
     font-family: "Anonymous Pro";
