--- a/src/styles/components/resortCard.css
+++ b/src/styles/components/resortCard.css
@@ -69,7 +69,7 @@
     height: 60px;
     width: 15vw;
 
-    background-color: black;
+    background-color: #141414;
     color:#ededeb;
 
     transition: transform 0.3s ease; 
@@ -87,7 +87,7 @@
 
     .visitPageButton {
         border: 2px solid #ededeb;
-        background-color: black;
+        background-color: #141414;
         color: #ededeb; 
     }
 
