--- a/src/styles/components/resortInfo.css
+++ b/src/styles/components/resortInfo.css
@@ -26,7 +26,6 @@
 
     padding-top: 5vh;
     margin-bottom: 10vh;
-
 }
 
 .indvBackground::after {
@@ -52,7 +51,7 @@
 
     font-size: 4vw;
     font-family: "Anonymous Pro", monospace;
-    color: black;
+    color: #141414;
 
     height: 4vw;
 }
@@ -69,7 +68,7 @@
     
     font-size: 1.3em;
     font-family: "Anonymous Pro"," monospace";
-    color: black;
+    color: #141414;
 
     display: grid;
     grid-template-areas:
@@ -123,7 +122,7 @@
 
     font-size: 2em;
 
-    border-color: black;
+    border-color: #141414;
     border-radius: 10px;
     border-width: 2px;
 }
@@ -157,7 +156,8 @@
             width: 20vw;
             min-width: 30vw;
             padding: 1.5vh;
-            border-color: #ededeb;
+            background-color: #141414;
+            color: #ededed;
             cursor: pointer;
             transition: transform 0.3s ease; 
         }
@@ -268,6 +268,7 @@
     }
 
     .favoriteButton {
+        border-color: #ededeb;
         color: #ededeb;
     }
 
