--- a/src/styles/routes/feedback.css
+++ b/src/styles/routes/feedback.css
@@ -53,7 +53,7 @@
     
     font-size: 4vw;
     font-family: "Anonymous Pro", monospace;
-    color: black;
+    color: #141414;
 
     height: 4vw;
 
@@ -128,7 +128,7 @@
 .star {
     font-size: 2rem;
     cursor: pointer;
-    color: white;
+    color: #ededed;
     transition: color 0.2s;
 }
 
@@ -141,7 +141,7 @@
 
 .staticReviewstar {
     font-size: 1.5rem;
-    color: white;
+    color: #ededed;
     transition: color 0.2s;
     cursor: default;
 }
@@ -162,7 +162,7 @@
 .feedbackDisplay {
     grid-area: feedbackDisplay;
     
-    background-color: white;
+    background-color: #ededed;
     
     display: flex;
     flex-direction: column;
@@ -173,7 +173,7 @@
 .feedbackDisplay h1 {
     font-size: 4vw;
     font-family: "Anonymous Pro", monospace;
-    color: black;
+    color: #141414;
 }
 
 
@@ -195,8 +195,8 @@
     margin-bottom: 2vw;
 
     font-size: 16px;
-    background: black;
-    color: white;
+    background: #141414;
+    color: #ededed;
     cursor: pointer;
     transition: transform 0.3s ease; 
 }
@@ -232,7 +232,7 @@
 
     .submitButton {
         border: 2px solid #ededeb;
-        background-color: black;
+        background-color: #141414;
         color: #ededeb; 
     }
 
