--- a/src/styles/routes/home.css
+++ b/src/styles/routes/home.css
@@ -50,7 +50,7 @@
 
     font-size: 4vw;
     font-family: "Anonymous Pro", monospace;
-    color: black;
+    color: #141414;
     height: 4vw;
 }
 
@@ -66,7 +66,7 @@
     
     font-size: 1.3em;
     font-family: "Anonymous Pro"," monospace";
-    color: black;
+    color: #141414;
 
     display: grid;
     grid-template-areas:
@@ -175,7 +175,7 @@
     width: auto;
     height: auto;
 
-    border: 2px solid black;
+    border: 2px solid #141414;
     border-radius: 20px;
 
     width: 100%;
@@ -202,7 +202,7 @@
     width: auto;
     height: auto;
 
-    border: 2px solid black;
+    border: 2px solid #141414;
     border-radius: 20px;
 
     width: 100%;
