--- a/src/styles/routes/resort.css
+++ b/src/styles/routes/resort.css
@@ -53,7 +53,7 @@
 
     font-size: 4vw;
     font-family: "Anonymous Pro", monospace;
-    color: black;
+    color: #141414;
 
     height: 4vw;
 }
@@ -67,7 +67,7 @@
 
     font-size: 5vw;
     font-family: "Anonymous Pro", monospace;
-    color: black;
+    color: #141414;
 
     height: 4vw;
     margin-bottom: 2vw;
@@ -87,7 +87,7 @@
     font-size: 1.5vw;
     
     font-family: "Anonymous Pro"," monospace";
-    color: black;
+    color: #141414;
     transition: margin-top 0.5s ease;
 }
 
@@ -106,11 +106,11 @@
     width: auto;
     height: auto;
 
-    border: 2px solid black;
+    border: 2px solid #141414;
     
     border-radius: 5px;
-    background-color: black;
-    color: white; 
+    background-color: #141414;
+    color: #ededed; 
     cursor: pointer;
     transition: transform 0.3s ease; 
 }
@@ -132,7 +132,7 @@
     font-size: 1.5vw;
     
     font-family: "Anonymous Pro"," monospace";
-    color: black;
+    color: #141414;
     transition: margin-top 0.5s ease;
 }
 
@@ -148,8 +148,8 @@
     margin-bottom: 2vw;
 
     font-size: 16px;
-    background: black;
-    color: white;
+    background: #141414;
+    color: #ededed;
     cursor: pointer;
     transition: transform 0.3s ease; 
 }
@@ -165,7 +165,7 @@
     }
 
     .resortText {
-        color: white;
+        color: #ededed;
     }
 
     .resortBackground {
@@ -183,7 +183,7 @@
 
     .searchButton {
         border: 2px solid #ededeb;
-        background-color: black;
+        background-color: #141414;
         color: #ededeb; 
     }
 
