--- a/src/styles/routes/signIn.css
+++ b/src/styles/routes/signIn.css
@@ -66,7 +66,7 @@
 
 .logo-text {
   font-size: 2rem;
-  color: black;
+  color: #141414;
   margin: 0;
   font-family: "Anonymous Pro", monospace;
   font-weight: normal;
@@ -91,7 +91,7 @@
   display: block;
   margin-bottom: 0.5rem;
   font-weight: bold;
-  color:black;
+  color:#141414;
 }
 
 .form-input {
@@ -99,8 +99,8 @@
   padding: 0.5rem;
   border: 1px solid #ccc;
   border-radius: 4px;
-  color: black;
-  background-color: white;
+  color: #141414;
+  background-color: #ededed;
 }
 
 .form-links {
@@ -127,7 +127,7 @@
 .submit-button {
   padding: 0.5rem 1rem;
   background-color: #007bff;
-  color: white;
+  color: #ededed;
   border: none;
   border-radius: 4px;
   cursor: pointer;
