--- a/src/styles/components/navbar.css
+++ b/src/styles/components/navbar.css
@@ -1,13 +1,19 @@
+/* Apply box-sizing to all elements */
+* {
+    box-sizing: border-box;
+}
+
 div.navbarContainer {
-    display:flex;
+    display: flex;
     position: sticky;
     top: 0;
     z-index: 100000;
     background-color: white;
-    width: calc(100vw - 4px);
+    width: 100%; /* Ensure the width does not exceed 100% */
     border: 2px solid #141414;
     font-family: "Anonymous Pro";
     font-size: calc(0.5vw + 10px);
+    overflow-x: hidden; /* Prevent horizontal scrolling */
 
     a {
         transition: 500ms;
@@ -16,35 +22,40 @@ div.navbarContainer {
         scale: 1.2;
     }
 }
-div.navLeft{
+
+div.navLeft {
     display: flex;
     flex-direction: row;
     padding-left: 2vw;
     text-align: left;
-    padding-top:0.5vh;
+    padding-top: 0.5vh;
     width: 30%;
-   
 }
-div.navRight{
+
+div.navRight {
     display: flex;
     flex-direction: row;
-    justify-content: end;
+    justify-content: flex-end;
     align-items: center;
     padding-top: 0.5vh;
-    padding-right:2vw;
+    padding-right: 2vw;
     gap: 1rem;
     text-align: right;
     width: 70%;
-    
 }
-div.imgContainer{
+
+div.imgContainer {
     transform: translateY(-1px);
     img {
         width: 20px;
         height: 20px;
-        margin-left:.5vw;
-      }
-      
+        margin-left: .5vw;
+    }
+}
+
+/* Ensure body does not scroll horizontally */
+body {
+    overflow-x: hidden;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -54,7 +65,7 @@ div.imgContainer{
         width: calc(100vw - 2px);
         color: #ededeb;
     }
-    div.navLeft a, div.navRight a{
+    div.navLeft a, div.navRight a {
         color: #ededeb;
     }
     div.imgContainer img {
