--- a/src/styles/routes/home.css
+++ b/src/styles/routes/home.css
@@ -82,7 +82,7 @@
     grid-area: intro;
     margin-top: 2vw;
 
-    font-size: clamp(1rem, 4vw, 2.5rem);
+    font-size: 2rem;
 
     display: flex;
     flex-direction: column;
