--- a/src/styles/components/resortCard.css
+++ b/src/styles/components/resortCard.css
@@ -44,7 +44,7 @@
     width: 100%;
     max-width: 70vw;
 
-    font-size: 1rem;
+    font-size: clamp(1em, 3vw ,1rem);
 
     padding-block: 1rem;
     font-family: "Anonymous Pro";
