--- a/src/styles/routes/signIn.css
+++ b/src/styles/routes/signIn.css
@@ -8,7 +8,7 @@
   justify-content: center;
 }
 .signin-background{
-  background-image: url('src/assets/sign-in-background.jpg');
+  background-image: url('../assets/sign-in-background.jpg');
   background-size:cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -153,7 +153,7 @@
 @media (prefers-color-scheme: dark) {
  
   .signin-container {
-    background-image: url('src/assets/sign-in-background-dark.jpg');
+    background-image: url('../assets/sign-in-background-dark.jpg');
     background-position: center;
     height: calc(96vh - 2px);
   }
