--- a/src/styles/components/navbar.css
+++ b/src/styles/components/navbar.css
@@ -4,7 +4,7 @@ div.navbarContainer {
     top: 0;
     z-index: 100000;
     background-color: white;
-    width: calc(100vw - 4px);
+    width: calc(100% - 4px);
     border: 2px solid #141414;
     font-family: "Anonymous Pro";
     font-size: calc(0.5vw + 10px);
