--- a/src/styles/routes/home.css
+++ b/src/styles/routes/home.css
@@ -1,6 +1,7 @@
 .pageContainer {
     display: grid;
     width: 100%;
+    max-width: 100vw; /* Add this line */
     grid-template-areas:
         "pageBackground"
         "contentContainer";
@@ -12,6 +13,7 @@
 
     height: 35vw;
     width: 100%;
+    max-width:100vw;
     
     background-image: url('../assets/HiResMountain.jpg');
     background-size: cover;
@@ -56,7 +58,7 @@
     height: 4vw;
 }
 
-.pageContainer .contentContainer {
+.contentContainer {
     grid-area: contentContainer;
     margin-left: 2vh;
     margin-right: 2vh;
@@ -70,7 +72,6 @@
     font-family: "Anonymous Pro"," monospace";
     color: #141414;
 
-    display: grid;
     grid-template-areas:
         "intro"
         "mission"
@@ -84,7 +85,7 @@
     grid-area: intro;
     margin-top: 2vw;
 
-    font-size: 2rem;
+    font-size: clamp(1rem, 4vw, 2rem);
 
     display: flex;
     flex-direction: column;
@@ -244,6 +245,9 @@
 
   
 @media (max-width: 964px) {
+    .pageContainer {
+        width: 100vw; /* Add this line */
+    }
     .NOAA {
         height: auto;
         grid-template-columns: 1fr; 
