--- a/src/styles/routes/signIn.css
+++ b/src/styles/routes/signIn.css
@@ -13,7 +13,7 @@
   background-position: center;
   background-repeat: no-repeat;
   justify-content: center;
-  height:calc(96vh - 2px);
+  height: fit-content;
   width: 100vw;
 }
 
@@ -24,7 +24,6 @@
   margin-bottom: 2vh;
   width: 100%;
   height: auto;
-  max-height: 90vh;
 
   background-color: rgba(182, 182, 182, 0.849);
   border: 0px;
